# dwf-analyzer-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  smithery.json  smithery.yaml
.git_disabled/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index
.git_disabled/logs/: HEAD
.git_disabled/logs/refs/heads/: main
.git_disabled/logs/refs/remotes/origin/: HEAD  main
.git_disabled/refs/heads/: main
.git_disabled/refs/remotes/origin/: main
docs/: configuration.md  installation.md
src/dwf_analyzer_mcp/: __init__.py  __main__.py  server.py
src/dwf_analyzer_mcp/resources/: __init__.py  schemas.py
src/dwf_analyzer_mcp/tools/: __init__.py  dwf_parser.py  image_extractor.py  visual_analyzer.py
src/dwf_analyzer_mcp/utils/: __init__.py  metrics.py  model_manager.py
tests/: __init__.py  test_metrics.py  test_server.py
tests/fixtures/: home1.dwf
